update credit to forismatic api

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--Credit-->
         <footer class="container-fluid text-center">
             <p>by <a href="http://codepen.io/nct37/" target="_blank">Nick Tanner</a></p>
-            <p>credit to <a href="http://www.quotzzy.co/api" target="about_blank">Quotzzy</a></p>
+            <p>credit to <a href="https://forismatic.com/en/api/" target="about_blank">forismatic api</a></p>
         </footer>
     </div>
 
